<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressDetil"
            style="?android:progressBarStyleLarge"
            android:indeterminateTint="@android:color/black"
            android:visibility="visible"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_namadetil"
            app:layout_constraintEnd_toEndOf="@+id/imgdetil"
            app:layout_constraintStart_toStartOf="@+id/imgdetil"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imgdetil"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/tv_detilrilis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            />


        <TextView
            android:id="@+id/tv_namadetil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/transparan"
            android:drawableStart="@drawable/ic_collections_white_18dp"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imgdetil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.982"
            tools:text="Nama Film" />

        <TextView
            android:id="@+id/tv_detilrilis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tanggal_rilis"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgdetil" />

        <TextView
            android:id="@+id/tv_bahasa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detilrilis"
            tools:text="@string/durasi_film" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/overview"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote" />

        <TextView
            android:id="@+id/tv_Deskripsidetil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="@string/detil_movie" />

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_star_black_24dp"

            android:drawablePadding="5dp"
            android:layout_marginEnd="8dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bahasa" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>