<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    style="@style/CardView.Dark"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageview_listfilm"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_namafilm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/imageview_listfilm"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/imageview_listfilm"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/nama_film" />

        <TextView
            android:id="@+id/tv_tglrilis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_namafilm"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/imageview_listfilm"
            android:textSize="12sp"
            android:textStyle="italic"
            android:textColor="@android:color/white"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toEndOf="@+id/imageview_listfilm"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_namafilm"
            tools:text="@string/tglrilis" />

        <TextView
            android:id="@+id/tv_deskripsifilm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_tglrilis"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/imageview_listfilm"
            android:ellipsize="end"
            android:maxLines="4"
            android:textColor="@android:color/white"
            card_view:layout_constraintBottom_toTopOf="@+id/btn_detil"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/imageview_listfilm" />

        <Button
            android:id="@+id/btn_detil"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:layout_toEndOf="@+id/imageview_listfilm"
            android:text="@string/detil_movie"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.77"
            card_view:layout_constraintStart_toEndOf="@+id/imageview_listfilm" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_delete_black_24dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toEndOf="@+id/btn_detil"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_deskripsifilm"
            card_view:layout_constraintVertical_bias="0.55" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>